--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ emoji==2.2.0
 Faker==18.3.1
 flake8==5.0.4
 Flask==2.2.3
+Flask-JWT-Extended==4.4.4
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-RESTful==0.3.9
@@ -30,6 +31,7 @@ packaging==23.1
 psycopg2-binary==2.9.6
 pycodestyle==2.9.1
 pyflakes==2.5.0
+PyJWT==2.7.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
